--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emaar Tech</title>
+    <!-- link Favicon -->
+    <link
+      rel="shortcut icon"
+      href="./assets/emartech-logo.jpeg"
+      type="image/x-icon"
+    />
     <!-- Boostrap Link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
