--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
               </div>
               <div class="col-md-7">
                 <div class="card-body text-white">
-                  <h5 class="card-title">Selin Çevik</h5>
+                  <h5 class="card-title">Ali Aga</h5>
                   <p class="card-text text-secondary">
                     This is a wider card with supporting text below as a natural
                     lead-in to additional content. This content is a little bit
@@ -488,7 +488,7 @@
     </section>
     <!-- *Questions Area -->
     <section class="container">
-      <div class="row mt-5">
+      <div class="row mt-5 pb-5">
         <!-- about -->
         <div class="col-lg-5">
           <p>Sorular</p>
